--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       class="w-[100%] bg-[black] border-t-[7px] border-t-[#605d5d] sm:py-[70px] py-[50px]"
     >
       <div class="max-w-[1170px] mx-auto px-[20px]">
-        <h3 class="text-[#ccc] ">Questions? Call <a href="tel:000-800-919-1694" class="underline">000-800-919-1694</a></h3>
+        <h3 class="text-[#ccc] ">Questions? Call <a href="#" class="underline">000-800-919-1694</a></h3>
         <div class="py-[30px] grid sm:grid-cols-4 grid-cols-2">
           <div>
             <ul class="text-[#ccc]">
